accessible/src/base/FocusManager.cpp
@@ -7,11 +7,9 @@
 #include "Accessible-inl.h"
 #include "AccIterator.h"
 #include "DocAccessible-inl.h"
-#include "HTMLImageMapAccessible.h"
 #include "nsAccessibilityService.h"
 #include "nsAccUtils.h"
 #include "nsEventShell.h"
-#include "nsImageFrame.h"
 #include "Role.h"
 
 #include "nsEventStateManager.h"
@@ -39,7 +37,7 @@ FocusManager::FocusedAccessible() const
   if (focusedNode) {
     DocAccessible* doc = 
       GetAccService()->GetDocAccessible(focusedNode->OwnerDoc());
-    return doc ? GetFocusableAccessibleFor(focusedNode, doc) : nullptr;
+    return doc ? doc->GetAccessibleEvenIfNotInMapOrContainer(focusedNode) : nullptr;
   }
 
   return nullptr;
@@ -63,7 +61,7 @@ FocusManager::IsFocused(const Accessible* aAccessible) const
       DocAccessible* doc = 
         GetAccService()->GetDocAccessible(focusedNode->OwnerDoc());
       return aAccessible ==
-        (doc ? GetFocusableAccessibleFor(focusedNode, doc) : nullptr);
+        (doc ? doc->GetAccessibleEvenIfNotInMapOrContainer(focusedNode) : nullptr);
     }
   }
   return false;
@@ -243,7 +241,7 @@ FocusManager::ProcessDOMFocus(nsINode* aTarget)
   DocAccessible* document =
     GetAccService()->GetDocAccessible(aTarget->OwnerDoc());
 
-  Accessible* target = GetFocusableAccessibleFor(aTarget, document);
+  Accessible* target = document->GetAccessibleEvenIfNotInMapOrContainer(aTarget);
   if (target && document) {
     // Check if still focused. Otherwise we can end up with storing the active
     // item for control that isn't focused anymore.
@@ -251,7 +249,8 @@ FocusManager::ProcessDOMFocus(nsINode* aTarget)
     if (!focusedNode)
       return;
 
-    Accessible* DOMFocus = GetFocusableAccessibleFor(focusedNode, document);
+    Accessible* DOMFocus =
+      document->GetAccessibleEvenIfNotInMapOrContainer(focusedNode);
     if (target != DOMFocus)
       return;
 
@@ -283,7 +282,8 @@ FocusManager::ProcessFocusEvent(AccEvent* aEvent)
     if (!focusedNode)
       return;
 
-    Accessible* DOMFocus = GetFocusableAccessibleFor(focusedNode, document);
+    Accessible* DOMFocus =
+      document->GetAccessibleEvenIfNotInMapOrContainer(focusedNode);
     if (target != DOMFocus)
       return;
 
@@ -407,29 +407,4 @@ FocusManager::FocusedDOMDocument() const
 {
   nsINode* focusedNode = FocusedDOMNode();
   return focusedNode ? focusedNode->OwnerDoc() : nullptr;
-}
-
-Accessible*
-FocusManager::GetFocusableAccessibleFor(nsINode* aNode,
-                                        DocAccessible* aDoc) const
-{
-  if (!aNode->IsContent() || !aNode->AsContent()->IsHTML(nsGkAtoms::area))
-    return aDoc->GetAccessibleOrContainer(aNode);
-
-  // XXX Bug 135040, incorrect when multiple images use the same map.
-  nsIFrame* frame = aNode->AsContent()->GetPrimaryFrame();
-  nsImageFrame* imageFrame = do_QueryFrame(frame);
-  if (imageFrame) {
-    Accessible* parent = aDoc->GetAccessible(imageFrame->GetContent());
-    if (parent) {
-      Accessible* area =
-        parent->AsImageMap()->GetChildAccessibleFor(aNode);
-      if (area)
-        return area;
-
-      return nullptr;
-    }
-  }
-
-  return aDoc->GetAccessibleOrContainer(aNode);
 }
